add script webpage as a RAG + little project changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.16.3...3.19.7 FATAL_ERROR)
 
-project(SlicerExtensionSandbox)
+project(SlicerSlicerGPT)
 
 #-----------------------------------------------------------------------------
 # Extension meta-information
-set(EXTENSION_HOMEPAGE "https://www.slicer.org/wiki/Documentation/Nightly/Extensions/SlicerExtensionSandbox")
+set(EXTENSION_HOMEPAGE "https://www.slicer.org/wiki/Documentation/Nightly/Extensions/SlicerSlicerGPT")
 set(EXTENSION_CONTRIBUTORS "Yanisse Ferhaoui (Institut Pascal)")
 set(EXTENSION_DESCRIPTION "Just a simple module to test extensions creations")
-set(EXTENSION_ICONURL "https://www.example.com/Slicer/Extensions/SlicerExtensionSandbox.png")
-set(EXTENSION_SCREENSHOTURLS "https://www.example.com/Slicer/Extensions/SlicerExtensionSandbox/Screenshots/1.png")
+set(EXTENSION_ICONURL "https://www.example.com/Slicer/Extensions/SlicerSlicerGPT.png")
+set(EXTENSION_SCREENSHOTURLS "https://www.example.com/Slicer/Extensions/SlicerSlicerGPT/Screenshots/1.png")
 set(EXTENSION_DEPENDS "NA") # Specified as a list or "NA" if no dependencies
 
 #-----------------------------------------------------------------------------
